--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,9 @@
-== This is a follow repo for the online treehouse course for rails, move along, nothing interesting.
+== Treebook
+
+This is my private repository to follow the Ruby on Rails courses at treehouse:
+
+http://teamtreehouse.com/library/programming/build-a-simple-ruby-on-rails-application
+http://teamtreehouse.com/library/programming/building-social-features-in-ruby-on-rails
+http://teamtreehouse.com/library/programming/advanced-social-features-in-ruby-on-rails
+
+Unfortunately I've forgotten to tag the videos, sorry about that :P
